// Copyright 2017 The Goma Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

import "goma_stats.proto";

package devtools_goma;

// GomaStatzStats will contain various stats that will be shown in /statz.
// This proto will be shown in human readable style or machine readable
// (e.g. json) style.

// NEXT ID TO USE: 8
message GomaStatzStats {
  GomaStats stats = 1;

  map<string, int64> error_to_log = 2;
  map<string, int64> error_to_user = 3;
  map<string, int64> local_run_reason = 4;
  map<string, int64> version_mismatch = 5;
  map<string, int64> binary_hash_mismatch = 6;
  map<string, int64> subprogram_mismatch = 7;
}
